# hf-upload-demo

./: .gitignore  HF_DATASET_CARD.md  README.md  create_dataset.py  generate_images.py  inspect_dataset.py  pyproject.toml  query.py  update_dataset.py
raw_data/: README.md  generate_images.py  magical_kingdom.json
