[project]
name = "hf-upload-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.29.2",
    "open-clip-torch>=3.3.0",
    "pillow==12.1.1",
    "openai>=2.24.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pylance>=2.0.1",
    "python-dotenv>=1.2.1",
]
